BLOG_Salesforce/force-apps/deploy/main/default/objects/FunnyName__c/FunnyName__c.object-meta.xml
<CustomObject>
    <label>Funny Name</label>
    <nameField>
        <label>Funny Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funny Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>