BLOG_Salesforce/force-apps/deploy/main/default/objects/FunnyName__c/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <label>Pronunciation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>