BLOG_Salesforce/force-apps/deploy/main/default/objects/FunnyName__c/fields/Random__c.field-meta.xml
<CustomField>
    <fullName>Random__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Random</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>