BLOG_Salesforce/force-apps/deploy/main/default/objects/FunnyName__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pronunciation__c</columns>
    <columns>Points__c</columns>
    <columns>Random__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>